feat: Fazendo conexão ao postgres e realizando primeira migrate da tabela event

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=api
 spring.datasource.url=jdbc:postgresql://localhost:5432/eventostech
 spring.datasource.username=walmirferjr
 spring.datasource.password=password
+
+# Força o Flyway a rodar e mostra erros detalhados se falhar
+spring.flyway.enabled=true
+logging.level.org.flywaydb=DEBUG
