feat: Configurando S3 Bucket

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=api
 spring.datasource.url=jdbc:postgresql://localhost:5432/eventostech
 spring.datasource.username=walmirferjr
 spring.datasource.password=password
+aws.region=us-east-1
+aws.bucket.name=eventostech-wal-imagens
 
 # Força o Flyway a rodar e mostra erros detalhados se falhar
 spring.flyway.enabled=true
